# vdkio

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  config.template.toml  output.aac  output.ts
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: exponential_golomb_wikipedia.md  implementation_plan.md  tests_failure_report.md
examples/: aac_format.rs  rtsp_player.rs  rtsp_to_hls.rs  stress_test.rs  ts_format.rs
src/: config.rs  error.rs  lib.rs
src/av/: mod.rs  packet.rs
src/av/transcode/: mod.rs
src/codec/: mod.rs
src/codec/aac/: parser.rs  types.rs
src/codec/h264/: mod.rs  parser.rs  parser_test.rs  transcode.rs  types.rs
src/codec/h265/: mod.rs  parser.rs  tests.rs  types.rs
src/format/: mod.rs
src/format/aac/: mod.rs
src/format/rtcp/: mod.rs  tests.rs
src/format/rtp/: mod.rs  tests.rs
src/format/rtsp/: client.rs  connection.rs  mod.rs  sdp.rs  stream.rs  transport.rs
src/format/ts/: demuxer.rs  hls.rs  mod.rs  muxer.rs  parser.rs  pes.rs  tests.rs  types.rs
src/utils/: bits.rs  bits_test.rs  crc.rs  mod.rs
test_output/: output.ts  playlist.m3u8
tests/: integration_test.rs  rtsp_hls_test.rs
