[package]
name = "vdkio"
version = "0.1.0"
edition = "2021"
description = "A high-performance video toolkit for building streaming applications in Rust, with focus on RTSP, HLS, and codec support including H.264/H.265"
authors = ["Rust VDK Contributors"]
license = "MIT"
repository = "https://github.com/rust-vdk/vdkio"
documentation = "https://docs.rs/vdkio"
readme = "README.md"
homepage = "https://github.com/rust-vdk/vdkio"
keywords = ["video", "streaming", "rtsp", "hls", "h264"]
categories = ["multimedia", "multimedia::video", "network-programming", "api-bindings"]
exclude = [
    "output/*",
    "test_output/*",
    "*.aac",
    "*.ts"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros", "rt-multi-thread"] }
bytes = "1"
futures = "0.3"
thiserror = "2.0.11"
async-trait = "0.1"
parking_lot = "0.12"
bitvec = "1"
log = "0.4"
base64 = "0.22.1"
url = "2.4"
md-5 = "0.10.6"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
dotenv = "0.15.0"